--- a/leari-pop-growth.Rmd
+++ b/leari-pop-growth.Rmd
@@ -18,9 +18,8 @@ Considerations:
 library(readr)
 library(knitr)
 library(kableExtra)
-
-matrix <- read_csv("~/Dropbox/A.leari/modelo censos/matrix-censos-CEMAVE_3_one population.csv",col_types = cols(date = col_date(format = "%Y-%m-%d")))
-
+#matrix <- read_csv("~/Dropbox/A.leari/modelo censos/matrix-censos-CEMAVE_3_one population.csv",col_types = cols(date = col_date(format = "%Y-%m-%d")))
+matrix <- read_csv("C:/Users/voeroesd/Dropbox/A.leari/ms erica revisao/modelo_censos1/matrix-censos-CEMAVE_3_one population.csv",col_types = cols(date = col_date(format = "%Y-%m-%d")))
 # a function to get mid day for month and convert to julian day, to use to get the julian date of surveys with known month but unknown day
 mid.month.day <- function(month){
   day <- paste(month,"-","15",sep="")
@@ -28,25 +27,18 @@ mid.month.day <- function(month){
   day <- as.integer(floor(julian(day, origin="2016-12-31")))
   return(day)
 }
-
-
 matrix$julian <- NA
 matrix$julian[-which(is.na(matrix$date)==T)] <- format(matrix$date[-which(is.na(matrix$date)==T)], "%j")
 matrix$julian[which(is.na(matrix$date)==T)] <- mid.month.day(matrix$month[which(is.na(matrix$date)==T)])
-
 matrix <- as.data.frame(matrix)
 matrix <- matrix[,c(3:5,7,9)]
-
 kable(matrix,digits = 6, caption="Census dataset", format = "html") %>%
   kable_styling(bootstrap_options = c("striped","hover","condensed"), full_width = FALSE)
-
-
 ```
 ### Some exploratory graphs
 ```{r Exploratory Plots, echo=FALSE, message=FALSE, warning=FALSE}
 boxplot(count~time, data=matrix[11:116,])
 boxplot(count~year, data=matrix[11:116,])
-
 ```
 
 ####Possible modelling approaches with *'unmarked'* (R package):  
@@ -72,14 +64,12 @@ Also fit a model with an interaction between months (factor) and years (to allow
 library(unmarked)
  
 # observation data. 
-
 sites <- unique(matrix[,c(2,3)]) 
 rownames(sites) <- seq(length=nrow(sites)) 
  
 y <- matrix(NA,34,6) 
 times <- matrix(NA,34,6) 
 months <- years <- rep(NA,34) 
-
  
 for (i in 1:34){ 
   counts <- matrix[which(matrix$year==sites[i,1]&matrix$month==sites[i,2]),4] 
@@ -93,29 +83,19 @@ for (i in 1:34){
     years[i] <- year[t]
   } 
 } 
-
-
 df <- as.data.frame(cbind(months,years,y))
 colnames(df) <- c("Month","Year","1","2","3","4","5","6")
-
-
 kable(df, caption="Counts for each surveyed month", format = "html") %>%
   kable_styling(bootstrap_options = c("striped","hover","condensed"), full_width = FALSE)
-
-
 kable(cbind(df[,1:2],times), caption="Time of day of counts", format = "html") %>%
   kable_styling(bootstrap_options = c("striped","hover","condensed"), full_width = FALSE)
-
-
 obs.covs <- list(times=times) 
  
 site.covs <- data.frame(year=sites[[1]]-2000,year2=(sites[[1]]-2000)^2,year3=(sites[[1]]-2000)^3 ,month=sites[[2]],month2=sites[[2]]^2,fmonth=as.factor(sites[[2]]))
-
 y <- y[11:34,]
 #y[20,3]<-NA #removing this outlier (see table)
 obs.covs$times<- obs.covs$times[11:34,]
 site.covs <- site.covs[11:34,] 
-
 umf1<- unmarkedFramePCount(y=y,siteCovs = site.covs,obsCovs = obs.covs) 
 summary(umf1) 
 ```
@@ -124,7 +104,6 @@ summary(umf1)
 #### Fit the models
 Only NB models converge
 ```{r Fit a model, echo=FALSE, message=FALSE, warning=FALSE}
-
 #Null (state level)
 #m01 <- pcount(~times~1,umf1,mixture = "P")# does not converge
 m02 <- pcount(~times~1,umf1,mixture = "NB")
@@ -143,20 +122,15 @@ m10 <- pcount(~times~year+year2+month,umf1,mixture = "NB",starts=coef(m09))
 #m12 <- pcount(~times~year+year2+year3+month,umf1,mixture = "P",starts=coef(m11))# does not converge
 m13 <- pcount(~times~year+year2+year3+month,umf1,mixture = "NB",se=FALSE  )
 m14 <- pcount(~times~year+year2+year3+month,umf1,mixture = "NB",starts=coef(m13))
-
 # Quadratic month and year effects
 m15 <- pcount(~times~year+year2+month+month2,umf1,mixture = "NB",se=FALSE)
 m16 <- pcount(~times~year+year2+month+month2,umf1,mixture = "NB",starts=coef(m15))
-
 # Month effect as a factor, and include interaction with years
 m17 <- pcount(~times~year+year2+fmonth,umf1,mixture = "NB",se=FALSE  )
 m18 <- pcount(~times~year+year2+fmonth,umf1,mixture = "NB",starts=coef(m17))
-
 m19 <- pcount(~times~fmonth*(year+year2),umf1,mixture = "NB",se=FALSE  )
 m20 <- pcount(~times~fmonth*(year+year2),umf1,mixture = "NB",starts=coef(m19))
-
 flist <- fitList(times_Null=m02,times_monthyear=m06,times_monthyear2=m10,timesmonthyear3=m14,month2year2=m16,fmonthyear2=m18,fmonth_intyear2=m20)
-
 modSel(flist) 
 ```
 Best model includes a linear effect of 'month' (as numeric variable) and 'year' as a 2nd order polynomial for abundance  
@@ -180,14 +154,11 @@ pred[,c(5,1:4)]
 ```{r Abundance predictions, echo=FALSE, message=FALSE, warning=FALSE}
 newData <- data.frame(year = 10,year2=100, month = 6:11)
 pre1 <- predict(m10, type = 'state', newdata = newData, appendData=TRUE)
-
 plot(Predicted~month,data=pre1, main= "Predicted abundances (2010) with 95%CI", type="line",ylim=c(0,2500))
 lines(lower~month,data=pre1, main= "Predicted abundances, November", type="line",lty=2)
 lines(upper~month,data=pre1, main= "Predicted abundances, November", type="line",lty=2)
-
 newData2 <- data.frame(year = 4:14,year2=(4:14)^2 , month = 11)
 pre2 <- predict(m10, type = 'state', newdata = newData2, appendData=TRUE)
-
 plot(Predicted~year,data=pre2, main= "Predicted abundances (Nov) with 95%CI", type="line",ylim=c(0,2500))
 lines(lower~year,data=pre2, main= "Predicted abundances, November", type="line",lty=2)
 lines(upper~year,data=pre2, main= "Predicted abundances, November", type="line",lty=2)
@@ -198,12 +169,27 @@ lines(upper~year,data=pre2, main= "Predicted abundances, November", type="line",
 #### Model goodness-of-fit  
 Parametric bootstrap of sum of squared residuals
 ```{r G-o-F, echo=FALSE, message=FALSE, warning=FALSE, results="hide"}
-pb <- parboot(m10, nsim=100, report=1)
+pb <- parboot(m10, nsim=100, report=1, seed=134)
+
+fitstats <- function(fm) {
+    observed <- getY(fm@data)
+    expected <- fitted(fm)
+    resids <- residuals(fm)
+    sse <- sum(resids^2, na.rm=T)
+    chisq <- sum((observed - expected)^2 / expected, na.rm=T)
+    freeTuke <- sum((sqrt(observed) - sqrt(expected))^2, na.rm=T)
+    out <- c(SSE=sse, Chisq=chisq, freemanTukey=freeTuke)
+    return(out)
+    }
+
+pb2 <- parboot(m10, fitstats, nsim=100, report=1, seed = 321)
+
 ```
 
 ```{r G-o-F2, echo=FALSE, message=FALSE, warning=FALSE}
 print(pb)
 plot(pb, main="")
+
 ```
   
 \
@@ -216,7 +202,6 @@ newData3 <- data.frame(year = 1:14,year2=(1:14)^2, month = 11)
 pre3 <- predict(m10, type = 'state', newdata = newData3, appendData=TRUE)
 trend1 <- round(pre3[14,c(1,3,4)]/pre3[4,c(1,3,4)]*100,2)
 trend1
-
 trend2 <- round(pre3[14,c(1,3,4)]/pre3[1,c(1,3,4)]*100,2)
 trend2
 ```
@@ -230,6 +215,3 @@ lines(Predicted~year,data=pre3, main= "Predicted abundances (Nov) with 95%CI", t
 lines(lower~year,data=pre3, type="line",lty=2)
 lines(upper~year,data=pre3, type="line",lty=2)
 ```
-
-
-
