--- a/leari-pop-growth.Rmd
+++ b/leari-pop-growth.Rmd
@@ -138,8 +138,9 @@ Best model includes a linear effect of 'month' (as numeric variable) and 'year' 
 Model summary and CIs
 ```{r Model summary, echo=FALSE, message=FALSE, warning=FALSE}
 summary(m10)
-round(confint(m10,type="det"),2)
-round(confint(m10,type="state"),2)
+round(confint(m10,type="det"),3)
+round(confint(m10,type="state"),3)
+round(confint(m10, type="alpha"),3)
 ```
 \
 Predicted detection probabilities (AM/PM)
@@ -169,20 +170,20 @@ lines(upper~year,data=pre2, main= "Predicted abundances, November", type="line",
 #### Model goodness-of-fit  
 Parametric bootstrap of sum of squared residuals
 ```{r G-o-F, echo=FALSE, message=FALSE, warning=FALSE, results="hide"}
-pb <- parboot(m10, nsim=100, report=1, seed=134)
+pb <- parboot(m10, nsim=100, report=1, seed=333)
 
-fitstats <- function(fm) {
-    observed <- getY(fm@data)
-    expected <- fitted(fm)
-    resids <- residuals(fm)
-    sse <- sum(resids^2, na.rm=T)
-    chisq <- sum((observed - expected)^2 / expected, na.rm=T)
-    freeTuke <- sum((sqrt(observed) - sqrt(expected))^2, na.rm=T)
-    out <- c(SSE=sse, Chisq=chisq, freemanTukey=freeTuke)
-    return(out)
-    }
-
-pb2 <- parboot(m10, fitstats, nsim=100, report=1, seed = 321)
+# fitstats <- function(fm) {
+#     observed <- getY(fm@data)
+#     expected <- fitted(fm)
+#     resids <- residuals(fm)
+#     sse <- sum(resids^2, na.rm=T)
+#     chisq <- sum((observed - expected)^2 / expected, na.rm=T)
+#     freeTuke <- sum((sqrt(observed) - sqrt(expected))^2, na.rm=T)
+#     out <- c(SSE=sse, Chisq=chisq, freemanTukey=freeTuke)
+#     return(out)
+#     }
+# 
+# pb2 <- parboot(m10, fitstats, nsim=100, report=1, seed = 321)
 
 ```
 
@@ -198,7 +199,7 @@ Model fit is OK: the observed residual variance, or root mean squared error (das
 ***  
 
 ```{r Trend, echo=FALSE, message=FALSE, warning=FALSE, results="hide"}
-newData3 <- data.frame(year = 1:14,year2=(1:14)^2, month = 11)
+newData3 <- data.frame(year = c(1:14),year2=c(1:14)^2, month = 11)
 pre3 <- predict(m10, type = 'state', newdata = newData3, appendData=TRUE)
 trend1 <- round(pre3[14,c(1,3,4)]/pre3[4,c(1,3,4)]*100,2)
 trend1
@@ -210,8 +211,21 @@ trend2
 Considering 2001-2014, trend is: `r trend2[1]`% (`r trend2[2]` - `r trend2[3]`)  
 
 ```{r Trend2, echo=FALSE, message=FALSE, warning=FALSE, results="hide"}
-boxplot(count~year, data=matrix,ylim=c(0,2500),col="grey")
+matrix2<-rbind(rbind(matrix,c("AM",2007,0,0,0)),c("AM",2007,0,0,0))
+matrix2$count<-as.numeric(matrix2$count)
+b1<-boxplot(count~year, data=matrix2,col=c(rep("grey90",6),"white",rep("grey90",7)),border=c(rep(1,6),"white",rep(1,7)),ylim=c(0,2500))
+b1
 lines(Predicted~year,data=pre3, main= "Predicted abundances (Nov) with 95%CI", type="line",ylim=c(0,2500),lwd=2)
 lines(lower~year,data=pre3, type="line",lty=2)
 lines(upper~year,data=pre3, type="line",lty=2)
+
+
+```
+
+Finaly, differences between estimated population size and the census values for each year can be attributes to imperfect detection.
+```{r estimates vs census, echo=FALSE, message=FALSE, warning=FALSE}
+newDat <- data.frame(Year=c(2001:2006,2008:2014),`Median census`=b1$stats[3,c(1:6,8:14)],Estimate=pre3[c(1:6,8:14),1],Ratio=pre3[c(1:6,8:14),1]/b1$stats[3,c(1:6,8:14)])
+
+kable(newDat,digits = 2, caption="Census and Estimates", format = "html") %>%
+  kable_styling(bootstrap_options = c("striped","hover","condensed"), full_width = FALSE)
 ```
