--- a/leari-pop-growth.Rmd
+++ b/leari-pop-growth.Rmd
@@ -18,14 +18,14 @@ Considerations:
 library(readr)
 library(knitr)
 library(kableExtra)
-<<<<<<< HEAD
+
 
 matrix <- read_csv("~/Dropbox/A.leari/ms pop trend/modelo_censos1/matrix-censos-CEMAVE_3_one population.csv",col_types = cols(date = col_date(format = "%Y-%m-%d")))
 
-=======
+
 #matrix <- read_csv("~/Dropbox/A.leari/modelo censos/matrix-censos-CEMAVE_3_one population.csv",col_types = cols(date = col_date(format = "%Y-%m-%d")))
-matrix <- read_csv("C:/Users/voeroesd/Dropbox/A.leari/ms erica revisao/modelo_censos1/matrix-censos-CEMAVE_3_one population.csv",col_types = cols(date = col_date(format = "%Y-%m-%d")))
->>>>>>> 860c11d67240bfa331c8eb9d34a732f5c627e0d1
+#matrix <- read_csv("C:/Users/voeroesd/Dropbox/A.leari/ms erica revisao/modelo_censos1/matrix-censos-CEMAVE_3_one population.csv",col_types = cols(date = col_date(format = "%Y-%m-%d")))
+
 # a function to get mid day for month and convert to julian day, to use to get the julian date of surveys with known month but unknown day
 mid.month.day <- function(month){
   day <- paste(month,"-","15",sep="")
@@ -44,6 +44,10 @@ kable(matrix,digits = 6, caption="Census dataset", format = "html") %>%
 ### Some exploratory graphs
 ```{r Exploratory Plots, echo=FALSE, message=FALSE, warning=FALSE}
 boxplot(count~time, data=matrix[11:116,])
+testdf<-matrix[11:116,c(1,4)]
+testdf$time<-as.factor(testdf$time)
+t.test(count~time, data=testdf)
+
 boxplot(count~year, data=matrix[11:116,])
 ```
 
@@ -110,11 +114,9 @@ summary(umf1)
 #### Fit the models
 Only NB models converge
 ```{r Fit a model, echo=FALSE, message=FALSE, warning=FALSE}
-<<<<<<< HEAD
+
 library("nmixgof")
 
-=======
->>>>>>> 860c11d67240bfa331c8eb9d34a732f5c627e0d1
 #Null (state level)
 #m01 <- pcount(~times~1,umf1,mixture = "P")# does not converge
 m02 <- pcount(~times~1,umf1,mixture = "NB")
@@ -212,7 +214,7 @@ Model fit is OK: the observed residual variance, or root mean squared error (das
 ```{r Trend, echo=FALSE, message=FALSE, warning=FALSE, results="hide"}
 newData3 <- data.frame(year = c(1:14),year2=c(1:14)^2, month = 11)
 pre3 <- predict(m10, type = 'state', newdata = newData3, appendData=TRUE)
-trend1 <- round(pre3[14,c(1,3,4)]/pre3[4,c(1,3,4)]*100,2)
+trend1 <- round(pre3[14,c(1,3,4)]/pre3[4,c(1,4,3)]*100,2)
 trend1
 trend2 <- round(pre3[14,c(1,3,4)]/pre3[1,c(1,3,4)]*100,2)
 trend2
